--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,6 +1,7 @@
 * {
   margin: 0;
   padding: 0;
+  font-family: "mali", cursive, Verdana, Geneva, Tahoma, sans-serif;
   box-sizing: border-box;
 }
 
@@ -21,7 +22,6 @@ body {
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-  font-family: "mali", cursive, Verdana, Geneva, Tahoma, sans-serif;
   color: white;
 }
 
@@ -30,7 +30,8 @@ body {
 }
 
 .discover {
-  margin: 20px auto;
+  margin: 20px auto 40px;
+  padding: 4px 0;
   color: #FF6584;
   font-weight: 500;
   font-size: 20px;
@@ -39,22 +40,39 @@ body {
   gap: 10px;
 }
 
-.login{
+.login {
   background: #3290FF;
-border-radius: 21px;
-color: white;
-padding-block: 8px;
-font-size: 20px;
+  border-radius: 21px;
+  color: white;
+  padding-block: 8px;
+  font-size: 20px;
 }
 
-.orText{
+.orText {
   text-align: center;
   margin: 10px auto;
 }
 
-.loginGoogle{
+.loginGoogle {
   padding: 5px 0;
   background: #FE756C;
   color: white;
   gap: 10px;
 }
+
+/* Burger Menu  */
+
+.burgerMenu span:nth-child(1) {
+  background-color: #fff;
+  width: 100%;
+  height: 4px;
+}
+
+.burgerMenu span:nth-child(2) {
+  background-color: #fff;
+  width: 50%;
+  height: 4px;
+  margin-left: 50%;
+}
+
+/* Burger Menu  */
