--- a/client/src/index.css
+++ b/client/src/index.css
@@ -9,6 +9,7 @@
 a {
   text-decoration: none;
   color: inherit;
+  width: 100%;
 }
 
 ::-webkit-scrollbar {
@@ -30,6 +31,14 @@ body {
   background-size: cover;
   color: white;
   position: relative;
+}
+
+.w-100 {
+  width: 100%;
+}
+
+.h-100 {
+  height: 100%;
 }
 
 .arrowRight {
@@ -71,7 +80,7 @@ body {
 
 /* Burger Menu  */
 
-.burgerMenu{
+.burgerMenu {
   cursor: pointer;
 }
 
@@ -92,20 +101,21 @@ body {
   margin-left: 50%;
 }
 
-.burgerMenu:hover > span:nth-child(1){
+.burgerMenu:hover>span:nth-child(1) {
   animation: reduce-wrap .5s linear forwards;
   /* animation: name duration timing-function delay iteration-count direction fill-mode; */
 }
 
-.burgerMenu:hover > span:nth-child(2){
+.burgerMenu:hover>span:nth-child(2) {
   animation: reduce-wrap .5s linear forwards;
 }
 
 @keyframes reduce-wrap {
-  50%{
+  50% {
     width: 0%;
   }
-   100%{
+
+  100% {
     width: 100%;
     margin-left: 0;
   }
@@ -117,7 +127,7 @@ body {
   opacity: 1;
 }
 
-.closebtn0{
+.closebtn0 {
   opacity: 0;
   transform: scaleY(0);
   /* transition: all .8s; */
@@ -144,26 +154,26 @@ body {
 
 /* Navbar, animation */
 
-.navbarTop{
-  
+div.navbarTop {
+  position: relative;
 }
 
-.menuItems{
+.menuItems {
   background: #0a3a5176;
   width: 85%;
-  height: calc(100vh - 120%);
-  max-width: 240px;
-  min-width: 200px;
-  padding-inline: 20px;
+  height: calc(100vh - 100%);
+  max-width: 400px;
+  min-width: 260px;
+  padding-inline: 2em;
   padding-block: 30px;
   text-align: right;
   transition: all .5s;
-  top: 120%;
+  top: 100%;
   right: 0%;
   z-index: 6;
 }
 
-.menuhide{
+.menuhide {
   transition: all .5s;
   width: 0;
   transform: translate(100%, 0);
@@ -171,38 +181,56 @@ body {
 
 /* Navbar, animation */
 
-.inputControl{
+.inputControl {
   padding: 8px 18px;
   border: none;
   border-radius: 20px;
   color: white;
 }
 
-.loginText{
+.loginText {
   text-align: center;
   margin-top: 10px;
 }
 
-.PassForget{
+.PassForget {
   text-align: right;
 }
 
-.LoginTitle{
+.LoginTitle {
   margin-top: 10px;
 }
 
-.form{
-  
-}
+.form {}
 
-.loginBtn{
+.loginBtn {
   margin: 50px 0px 20px;
 }
 
-.LogToSign{
+.LogToSign {
   text-align: center;
 }
 
-button:hover{
+button:hover {
   background-color: #d8d8d8ba;
 }
+
+/* Item Section */
+
+.item {
+  max-width: 200px;
+}
+
+@media (min-width: 400px) {
+
+  .item {
+    max-width: 250px;
+  }
+}
+
+img {
+  object-fit: cover;
+  object-position: center;
+}
+
+/* Item Section */
