--- a/client/src/index.css
+++ b/client/src/index.css
@@ -16,6 +16,10 @@ a {
   width: 0;
 }
 
+::selection {
+  outline: 1px solid skyblue;
+}
+
 button {
   cursor: pointer;
   transition: all .5s;
@@ -24,9 +28,11 @@ button {
 body {
   width: 100vw;
   height: 100vh;
-  overflow-y: scroll;
-  background: linear-gradient(358.36deg, rgba(34, 130, 248, 0.822) 10.06%, rgba(255, 103, 69, 0.771) 138.32%), url(./img/background.png);
+  /* overflow-y: scroll;
+  overflow-x: hidden; */
+  background: linear-gradient(358.36deg, #2282f8ea 10.06%, #ff6745a1 138.32%), url(./img/background.png);
   background-position: center;
+  backdrop-filter: blur(7px);
   background-repeat: no-repeat;
   background-size: cover;
   color: white;
@@ -153,8 +159,8 @@ body {
 
 /* Navbar, animation */
 
-div.navbarTop {
-  position: relative;
+.navbarTop {
+  position: fixed;
 }
 
 .menuItems {
