--- a/client/src/index.css
+++ b/client/src/index.css
@@ -28,7 +28,7 @@ button {
 body {
   width: 100vw;
   height: 100vh;
-  /* background: linear-gradient(358.36deg, #2282f8ea 10.06%, #ff6745a1 138.32%); */
+  background: linear-gradient(358.36deg, #2282f8ea 10.06%, #ff6745a1 138.32%);
   background-color: #222;
   /* url(./img/background.png); */
   background-position: center;
