--- a/client/src/index.css
+++ b/client/src/index.css
@@ -4,6 +4,7 @@
   font-family: 'Poppins', sans-serif;
   box-sizing: border-box;
   outline: none;
+  line-height: 120%;
 }
 
 a {
@@ -262,7 +263,7 @@ button:hover {
 
 img {
   object-fit: cover;
-  object-position: center;
+  object-position: top center;
 }
 
 .elementData {
